Fix text in links not being visible on dark mode

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -71,6 +71,7 @@ $secondaryColor: #ffc500;
     --background-color: #ffffff;
     --text-color: #000000;
     --link-color: #003aff;
+    --text-link-hover-color: #ffffff;
     --card-background: #f9f9f9;
     --card-border: #ddd;
     --header-color: #003aff;
@@ -82,6 +83,7 @@ $secondaryColor: #ffc500;
         --text-color: #e0e0e0;
         --header-color: #ffffff;
         --link-color: #ffc500;
+        --text-link-hover-color: #000000;
         --card-background: #1c1c1c;
         --card-border: #333;
     }
@@ -411,10 +413,13 @@ ul.detail_pills {
 .link {
     text-decoration: underline var(--link-color) 2px;
     color: var(--link-color);
+    margin-top: 8px;
+    margin-bottom: 8px;
 
     &:hover {
         background: $secondaryColor;
         animation: background 0.5s ease;
+        color: var(--text-link-hover-color);
     }
 
     &:active {
